// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add dummy fragment name if missing (relay) 1`] = `
"
                
                             
        fragment _ on Viewer {
          image
        }
        
      
  "
`;

exports[`add dummy fragment name if missing (relay) and \`on\` in next line 1`] = `
"
                
                             
        fragment
              _ on Viewer {
          image
        }
        
      
  "
`;

exports[`allow template string interpolation at document level 1`] = `
"
        
      fragment FeedEntry on Entry {
        commentCount
        ...VoteButtons
        ...RepoInfo
      }
                                    
                                 
     
  "
`;

exports[`extract embedded queries 1`] = `
"
                
                             
        fragment test on Viewer {
          image
        }
        
      
  "
`;

exports[`extract embedded queries multiline tag 1`] = `
"
                      
     
      fragment test on Test {
        name
      }
     
  "
`;

exports[`extract multiple embedded queries 1`] = `
"
                
                             
        fragment test on Viewer {
          image
        }
         
      

                
                             
        fragment test on Viewer {
          image
        }
         
      

                       
      fragment test on Viewer {
        image
      }
      
  "
`;

exports[`plain queries 1`] = `
"
    fragment test on Viewer {
      image
    }
  "
`;

exports[`replace all irregular whitespace with space 1`] = `
"
              

             
      fragment _ on Viewer {
        me
      }
      
  "
`;

exports[`replace inline js fragment with dummy fragment multiline 1`] = `
"
                  
                               
          fragment _ on Viewer {
            ...F,,,,,,,,,,,,,,,,,,,,,,,,,,,,, ,
              ,,,,, ,,,,,,,,,,,,,,,
              ,,,,, ,,,,,,,,,,,,,,,
            ,,, name
          }
          
        
    "
`;

exports[`replace inline js fragment with dummy fragment single line 1`] = `
"
                  
                               
          fragment _ on Viewer {
            ...F,,,,,,,,,,,,,,,,,,,,,,,,,,,,,, name
          }
          
        
    "
`;

exports[`works with invalid queries 1`] = `
"
    fragment Viewer {
      image
    }
  "
`;
